src_files = files (
	'collections/LinkedHashMap.vala',   
    'commands/AboutCommand.vala',
    'commands/CommandFacade.vala',
    'commands/CreateProjectCommand.vala',
    'commands/HelpCommand.vala',
    'commands/InitCommand.vala',
    'commands/InstallCommand.vala',
    'commands/RemoveCommand.vala',
    'commands/RequireCommand.vala',
    'commands/UpdateCommand.vala',
    'commands/VanatCommand.vala',
    'commands/VersionCommand.vala',
    'configs/Constants.vala',
    'configs/GitConfig.vala',
    'exceptions/FileOrDirectoryNotFoundException.vala',
    'exceptions/IllegalArgumentException.vala',
    'exceptions/IOException.vala',
    'exceptions/JsonException.vala',
    'exceptions/NullReferenceException.vala',
    'vjson/VanatJson.vala',
    'vjson/VPackagistJson.vala',
    'utils/ConsoleUtil.vala',
    'utils/FileUtil.vala',
    'utils/StringUtil.vala',
    'utils/TextColorUtil.vala',
    'Application.vala',
    'Main.vala'
)